--- a/costaurant/foods/templates/foods/index.html
+++ b/costaurant/foods/templates/foods/index.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>코스토랑</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="{% static 'foods/css/styles.css' %}" />
   </head>
   <body>
     <div>July 16, 2020</div>
@@ -14,7 +15,11 @@
 
     <div class="food-container">
       <div class="food">
-        <img src="images/chicken.jpg" width="300px" height="200px" />
+        <img
+          src="{% static 'foods/images/chicken.jpg' %}"
+          width="300px"
+          height="200px"
+        />
         <div class="info">
           <h3>코딩에 빠진 닭</h3>
           <p>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
@@ -23,7 +28,11 @@
       </div>
 
       <div class="food">
-        <img src="images/sushi.jpg" width="300px" height="200px" />
+        <img
+          src="{% static 'foods/images/sushi.jpg' %}"
+          width="300px"
+          height="200px"
+        />
         <div class="info">
           <h3>코코스시</h3>
           <p>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
@@ -32,7 +41,11 @@
       </div>
 
       <div class="food">
-        <img src="images/burger.jpg" width="300px" height="200px" />
+        <img
+          src="{% static 'foods/images/burger.jpg' %}"
+          width="300px"
+          height="200px"
+        />
         <div class="info">
           <h3>코데리아</h3>
           <p>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
@@ -41,10 +54,53 @@
       </div>
 
       <div class="food">
-        <img src="images/bibimbap.jpg" width="300px" height="200px" />
+        <img
+          src="{% static 'foods/images/bibimbap.jpg' %}"
+          width="300px"
+          height="200px"
+        />
         <div class="info">
           <h3>코가네</h3>
           <p>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
+          <a href="#">메뉴 보기</a>
+        </div>
+      </div>
+
+      <div class="food">
+        <img
+          src="{% static 'foods/images/banana.jpg' %}"
+          width="300px"
+          height="200px"
+        />
+        <div class="info">
+          <h3>나에게 바나나</h3>
+          <p>바나나 먹으면 내게 바나나</p>
+          <a href="#">메뉴 보기</a>
+        </div>
+      </div>
+
+      <div class="food">
+        <img
+          src="{% static 'foods/images/croquette.jpg' %}"
+          width="300px"
+          height="200px"
+        />
+        <div class="info">
+          <h3>귀여운 고로케</h3>
+          <p>고로케 귀여운 너를 위한 고로케</p>
+          <a href="#">메뉴 보기</a>
+        </div>
+      </div>
+
+      <div class="food">
+        <img
+          src="{% static 'foods/images/pumpkin_soup.jpg' %}"
+          width="300px"
+          height="200px"
+        />
+        <div class="info">
+          <h3>단호한 단호박죽</h3>
+          <p>단호한 너를 달콤하게 녹여줄 단호박죽</p>
           <a href="#">메뉴 보기</a>
         </div>
       </div>
