--- a/costaurant/foods/templates/foods/index.html
+++ b/costaurant/foods/templates/foods/index.html
@@ -9,10 +9,10 @@
     <div class="info">
         <h3>코딩에 빠진 닭</h3>
         <p> 주머니가 가벼운 당신의 마음까지 생각한 가격! </p>
-        <a href="/foods/chicken">메뉴 보기</a>
+        <a href="/foods/menu/chicken">메뉴 보기</a>
     </div>
 </div>
-{% endblock food1 %}
+
 <div class="food">
     <img src="{% static 'foods/images/sushi.jpg' %}" width="300px" height="200px" />
     <div class="info">
@@ -66,3 +66,4 @@
         <a href="#">메뉴 보기</a>
     </div>
 </div>
+{% endblock food1 %}
