--- a/costory/posts/templates/posts/post_detail.html
+++ b/costory/posts/templates/posts/post_detail.html
@@ -1,10 +1,23 @@
 {% extends './base.html' %}
-{% block post_container %}
+{% load static %}
 
-<h2>{{post.title}}</h2>
-<div>작성일 : {{post.dt_created}}</div>
-<hr>
-<div>{{post.content|linebreaksbr}}</div>
-<hr>
-<a href={% url 'post-list' %}>돌아가기</a>
-{% endblock post_container %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'posts/css/post_detail.css' %}">
+{% endblock css %}
+
+{% block post_header %}
+<div class="container">
+    <h1 class="title">{{post.title}}</h1>
+    <p class="date">{{post.dt_created}}</p>
+</div>
+{% endblock post_header %}
+
+{% block content %}
+<div class="content">
+    <p class="text">{{post.content|linebreaksbr}}</p>
+    <p class="date_md">수정일 <span>{{post.dt_modified}}</span></p>
+</div>
+<div class="btn">
+    <div class="btn_list"><a href="{% url 'post-list' %}">목록으로</a></div>
+</div>
+{% endblock content %}
