--- a/ToDoList/board/templates/board/index.html
+++ b/ToDoList/board/templates/board/index.html
@@ -1,14 +1,11 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
-
-    <link type='text/css' rel='stylesheet' href="{% static 'my_to_do_app/bootstrap.min.css' %}" />
-    <link type='text/css' rel='stylesheet' href="{% static 'my_to_do_app/bootstrap-theme.min.css' %}" />
-    <link type='text/css' rel='stylesheet' href="{% static 'my_to_do_app/list.css' %}" />
-</head>
+    {% load static %}
+    <link type='text/css' rel='stylesheet' href='{% static "bootstrap.min.css" %}' />
+    <link type='text/css' rel='stylesheet' href='{% static "bootstrap-theme.min.css" %}' />
+    <link type='text/css' rel='stylesheet' href='{% static "list.css" %}' />
 
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -24,62 +21,48 @@
                 <a class="navbar-brand" href="#">아주 간단한 게시판</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-                <form class="navbar-form navbar-right">
-                    <div class="form-group">
-                        <input type="text" placeholder="ID" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" placeholder="Password" class="form-control">
-                    </div>
-                    <button type="submit" class="btn btn-success">Sign in</button>
+                <div class="navbar-form navbar-right">
+                    <button type="submit" class="btn btn-info">Sign in</button>
                     <button type="submit" class="btn btn-success">Sign up</button>
-                </form>
+                </div>
             </div>
             <!--/.navbar-collapse -->
         </div>
     </nav>
 
-    <div class="container">
-        <table class='table'>
-            <thead>
-                <tr>
-                    <th>번호</th>
-                    <th> 시간 </th>
-                    <th> 작성자 </th>
-                    <th> 제목 </th>
-                    <th>글 수정</th>
-                    <th>글 삭제</th>
+    <hr>
+    <a href="{% url 'main' %}">메인페이지로</a>
+    <div class='container'>
+        <form action='create/' method='POST'>
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="exampleInputPassword1">작성 날짜</label>
+                <input type="date" class="form-control" id='now_date' name='createdate'>
+                <script>
+                    document.getElementById('now_date').valueAsDate = new Date();
+                </script>
 
-                </tr>
-            </thead>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">작성자</label>
+                <input type="text" class="form-control" placeholder="작성자" name='writer'>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">글 제목</label>
+                <input type="text" class="form-control" name='subject'>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputFile">게시글</label>
+                <textarea class="form-control" rows=10 name='content'></textarea>
 
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td> 2021-12-21 </td>
-                    <td> 임종혁 </td>
-                    <td> 오늘 수업은 여기까지... </td>
-                    <td><button type="submit" class="btn btn-success">수정</button></td>
-                    <td><button type="submit" class="btn btn-success">삭제</button></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td> 2021-12-20 </td>
-                    <td> 임종혁 </td>
-                    <td> 왜 아무도 안보이죠? </td>
-                    <td><button type="submit" class="btn btn-success">수정</button></td>
-                    <td><button type="submit" class="btn btn-success">삭제</button></td>
-                </tr>
-                <tr>
+                <button type="submit" class="btn btn-default">등록</button>
+                <a href="{% url 'list' %}">
+                    <button type="button" class="btn btn-default">목록</button>
+                </a>
 
-                </tr>
-                <tr>
 
-                </tr>
-            </tbody>
 
-        </table>
-        <td><button type="submit" class="btn btn-success">게시글 작성하기</button></td>
+        </form>
     </div>
 </body>
 
