--- a/ToDoList/board/templates/board/list.html
+++ b/ToDoList/board/templates/board/list.html
@@ -59,10 +59,17 @@
                         <td>{{row.writer}}</td>
                         <td>{{row.subject}}</td>
                         <td>{{row.content}}</td>
-                        <td><button type="submit" class="btn btn-default">수정</button></td>
-                        <a href="{% url 'delete' row.id %}">삭제</a>
-                        <td><button type="submit" class="btn btn-default" id='row.id'>삭제</button>
+
+                        <td><button type='submit'>
+                                <div class="btn_modify"><a href="{% url 'update' row.id%}">수정하기</a></div>
+                            </button></td>
+
+                        <td><button type='submit'>
+                                <div class="btn_modify"><a href="{% url 'delete' row.id %}">삭제</a></div>
+                            </button>
                         </td>
+
+
                     </tr>
                 </form>
                 {% endfor %}
