--- a/ToDoList/board/templates/board/update.html
+++ b/ToDoList/board/templates/board/update.html
@@ -33,7 +33,7 @@
     <hr>
     <a href="{% url 'main' %}">메인페이지로</a>
     <div class='container'>
-        <form action='/board/create/' method='POST' name='baseform'>
+        <form action='/board/update/' method='POST' name='baseform'>
             {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputPassword1">작성 날짜</label>
@@ -41,7 +41,11 @@
                 <script>
                     document.getElementById('now_date').valueAsDate = new Date();
                 </script>
-
+                <td>{{post.id}}</td>
+                <td>{{post.createdate}}</td>
+                <td>{{post.writer}}</td>
+                <td>{{post.subject}}</td>
+                <td>{{post.content}}</td>
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">작성자</label>
@@ -56,7 +60,11 @@
                 <textarea class="form-control" rows=10 name='content'></textarea>
 
 
-                <button type="submit" class="btn btn-default">등록</button>
+
+                <td><button type='submit'>
+                        <div class="btn_modify"><a href="{% url 'update'%}">수정</a></div>
+                    </button>
+                </td>
 
 
 
