--- a/costory/posts/templates/posts/post_detail.html
+++ b/costory/posts/templates/posts/post_detail.html
@@ -22,5 +22,8 @@
     <div class="right-btn">
         <div class="btn_modify"><a href="{% url 'post-update' post.id %}">수정하기</a></div>
     </div>
+    <div class="right-btn">
+        <div class="btn_delete"><a href="{% url 'post-delete' post.id %}">삭제하기</a></div>
+    </div>
 </div>
 {% endblock content %}
