--- a/ToDoList/board/templates/board/list.html
+++ b/ToDoList/board/templates/board/list.html
@@ -52,26 +52,30 @@
 
             <tbody>
                 {% for row in rows %}
-                <form action="/board/delete/" method="GET" name='delete' id='delete'>
-                    <tr>
-                        <td>{{row.id}}</td>
-                        <td>{{row.createdate}}</td>
-                        <td>{{row.writer}}</td>
-                        <td>{{row.subject}}</td>
-                        <td>{{row.content}}</td>
 
-                        <td><button type='submit'>
-                                <div class="btn_modify"><a href="{% url 'update' row.id%}">수정하기</a></div>
-                            </button></td>
+                <tr>
+                    <td>{{row.id}}</td>
+                    <td>{{row.createdate}}</td>
+                    <td>{{row.writer}}</td>
+                    <td>{{row.subject}}</td>
+                    <td>{{row.content}}</td>
 
-                        <td><button type='submit'>
-                                <div class="btn_modify"><a href="{% url 'delete' row.id %}">삭제</a></div>
-                            </button>
-                        </td>
+                    <td>
+                        <a href='/board/update/?id={{row.id}}'>
+                            <button type='submit' class='btn btn-default'>수정</button>
+                        </a>
+                    </td>
+
+                    <td>
+                        <form action='/board/delete/' method='GET'>
+                            <input type="hidden" name=id value={{row.id}}>
+                            <button type='submit' class='btn btn-default'>삭제</button>
+                        </form>
+                    </td>
 
 
-                    </tr>
-                </form>
+                </tr>
+
                 {% endfor %}
             </tbody>
 
