--- a/costory/posts/templates/posts/post_list.html
+++ b/costory/posts/templates/posts/post_list.html
@@ -17,6 +17,7 @@
 <div class='btn_post'>
     <a href={% url 'post-create' %}>글쓰기</a>
 </div>
+{% if posts %}
 <div class="post_container">
     {% for post in posts %} <div class="post"><a href="{% url 'post-detail' post.id %}">
             <h2 class="title">{{post.title}}</h2>
@@ -25,4 +26,10 @@
         </a></div>
     {% endfor %}
 </div>
+{% else %}
+<div class='blank'>
+    <p>보여줄 글이 없어요<br>첫 글을 작성해보면 어떨까요?</p>
+</div>
+{% endif %}
+
 {% endblock content %}
