--- a/ToDoList/board/templates/board/update.html
+++ b/ToDoList/board/templates/board/update.html
@@ -1,75 +1,31 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    {% load static %}
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap-theme.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "list.css" %}' />
-
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">아주 간단한 게시판</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <div class="navbar-form navbar-right">
-                    <button type="submit" class="btn btn-info">Sign in</button>
-                    <button type="submit" class="btn btn-success">Sign up</button>
-                </div>
-            </div>
-            <!--/.navbar-collapse -->
+{% extends './base.html' %}
+{% block content %}
+<div class='container'>
+    <form action='/board/modify/' method='POST' name='baseform'>
+        {% csrf_token %}
+        <input type='hidden' name='id' value='{{post.id}}'>
+        <div class="form-group">
+            <label for="exampleInputPassword1">작성 날짜</label>
+            <input type="date" class="form-control" id='now_date' name='createdate' ,
+                value="{{post.createdate | date:'Y-m-d'}}">
         </div>
-    </nav>
-
-    <hr>
-    <a href="{% url 'main' %}">메인페이지로</a>
-    <div class='container'>
-        <form action='/board/modify/' method='POST' name='baseform'>
-            {% csrf_token %}
-            <input type='hidden' name='id' value='{{post.id}}'>
-            <div class="form-group">
-                <label for="exampleInputPassword1">작성 날짜</label>
-                <input type="date" class="form-control" id='now_date' name='createdate' ,
-                    value="{{post.createdate | date:'Y-m-d'}}">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">작성자</label>
-                <input type="text" class="form-control" placeholder="작성자" name='writer' value='{{post.writer}}'>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">글 제목</label>
-                <input type="text" class="form-control" name='subject' value='{{post.subject}}'>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputFile">게시글</label>
-                <textarea class="form-control" rows=10 name='content'>{{post.content}}
+        <div class="form-group">
+            <label for="exampleInputEmail1">작성자</label>
+            <input type="text" class="form-control" placeholder="작성자" name='writer' value='{{post.writer}}'>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">글 제목</label>
+            <input type="text" class="form-control" name='subject' value='{{post.subject}}'>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputFile">게시글</label>
+            <textarea class="form-control" rows=10 name='content'>{{post.content}}
                 </textarea>
+            <button type="submit" class="btn btn-default">수정</button>
 
-
-
-                <button type="submit" class="btn btn-default">수정</button>
-
-
-
-
-
-                <a href="{% url 'list' %}">
-                    <button type="button" class="btn btn-default">목록</button>
-                </a>
-
-
-
-        </form>
-    </div>
-</body>
-
-</html>
+            <a href="{% url 'list' %}">
+                <button type="button" class="btn btn-default">목록</button>
+            </a>
+    </form>
+</div>
+{% endblock content %}
