--- a/ToDoList/board/templates/board/list.html
+++ b/ToDoList/board/templates/board/list.html
@@ -15,6 +15,7 @@
         {{user}}
         <tbody>
             {{comment}}
+            {{post}}
             {% for row in rows %}
 
             <tr>
