--- a/costory/posts/static/posts/css/post_list.css
+++ b/costory/posts/static/posts/css/post_list.css
@@ -7,7 +7,7 @@ ul,
 li {
     margin: 0;
     padding: 0;
-    font-family: "NanumMyeongjo";
+    font-family: 'NanumMyeongjo';
     font-weight: 200;
     list-style: none;
     text-decoration: none;
@@ -98,7 +98,7 @@ h1 img {
     color: #fff;
     border: 1px solid #5b595f;
     border-radius: 1px;
-    background: url(../images/pen.svg) no-repeat 75px 11px/16px;
+    background: url(../images/pen.svg)no-repeat 75px 11px/16px;
 }
 
 .btn_post a:hover {
@@ -123,7 +123,7 @@ h1 img {
 
 .post:hover {
     background: rgba(41, 40, 46, 0.8);
-    transition: all 0.15s;
+    transition: all .15s;
 }
 
 .post h2 {
@@ -133,8 +133,10 @@ h1 img {
     line-height: 1.5;
     letter-spacing: -0.42px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
+    text-overflow:
+        ellipsis;
+    display:
+        -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     word-wrap: break-word;
@@ -154,8 +156,10 @@ h1 img {
     line-height: 2.07;
     letter-spacing: -0.32px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
+    text-overflow:
+        ellipsis;
+    display:
+        -webkit-box;
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     word-wrap: break-word;
@@ -180,7 +184,7 @@ h1 img {
 
 .paginator .first:hover img {
     transform: translateX(-2px);
-    transition: all 0.1s;
+    transition: all .1s;
 }
 
 .paginator .last {
@@ -193,7 +197,7 @@ h1 img {
 
 .paginator .last:hover img {
     transform: translateX(2px) rotateY(180deg);
-    transition: all 0.1s;
+    transition: all .1s;
 }
 
 .paginator .prev,
@@ -204,7 +208,7 @@ h1 img {
 .paginator .prev:hover,
 .paginator .next:hover {
     color: #c67814;
-    transition: all 0.2s;
+    transition: all .2s;
 }
 
 .paginator span {
