--- a/costory/posts/templates/posts/post_list.html
+++ b/costory/posts/templates/posts/post_list.html
@@ -17,9 +17,9 @@
 <div class='btn_post'>
     <a href={% url 'post-create' %}>글쓰기</a>
 </div>
-{% if page.object_list %}
+{% if page_obj.object_list %}
 <div class="post_container">
-    {% for post in page.object_list %} <div class="post"><a href="{% url 'post-detail' post.id %}">
+    {% for post in page_obj.object_list %} <div class="post"><a href="{% url 'post-detail' post.id %}">
             <h2 class="title">{{post.title}}</h2>
             <p class="date">{{post.dt_created}}</p>
             <p class="text">{{post.content|slice:':100'}}</p>
@@ -27,18 +27,18 @@
     {% endfor %}
 </div>
 <div class='paging'>
-    {% if page.has_previous %}
+    {% if page_obj.has_previous %}
     <a href="?page=1" class='first'>first</a>
-    <a href='?page={{page.previous_page_number}}' class='prev'>prev</a>
+    <a href='?page={{page_obj.previous_page_number}}' class='prev'>prev</a>
 
     <span class='page'>
-        <p>{{page.number}} of {{page.paginator.num_pages}}</p>
+        <p>{{page_obj.number}} of {{page_obj.paginator.num_pages}}</p>
     </span>
     {% endif %}
 
-    {% if page.has_next %}
-    <a href='?page={{page.next_page_number}}' class='next'>next</a>
-    <a href='?page={{page.paginator.num_pages}}' class='last'>last</a>
+    {% if page_obj.has_next %}
+    <a href='?page={{page_obj.next_page_number}}' class='next'>next</a>
+    <a href='?page={{page_obj.paginator.num_pages}}' class='last'>last</a>
     {% endif %}
 
 
